# cgs-intrinsic-simplification

./: .gitignore  CMakeLists.txt  CMakeLists_aaaaaaaaaaaaaaaaaaaa.txt  CMakeLists_db.txt  CMakeLists_oll.txt  README.md  main.cpp
include/: gcs_defs.hpp  geom_helpers.hpp  heat_diff.hpp  heat_diff_data.hpp  isimp.hpp  isimp_data.hpp  isimp_utils.hpp  lscm_wrapper.hpp  print.hpp  tinyad_defs.hpp
meshes/: angledSlant.off  disjQuad.off  doubleTriangle.off  edgeQuad.off  elonQuad.off  giantTriangle.off  largeTriangle.off  microCube.off  miniCube.off  plane.ply  quad.off  quadDegen.off  quadDisj.off  quadDouble.off  quadQuad.off  quadQuadQuad.off  quadQuadtower.off  slant.off  smallTriangle.off  triangle.off  triangleTriangle.off  triangleTriangleTriangle.off
meshes/RyanHolmes/Letters/: P_remesh.off
meshes/documentation/: ASDAP.off
meshes/presentation/: quadQuadPres.off
src/: geom_helpers.cpp  heat_diff.cpp  isimp.cpp  isimp_utils.cpp  print.cpp  save.cpp
viewer/: libigl_viewer_main_(was cpp).txt  main.cpp  query_texture_barycentrics.cpp  query_texture_barycentrics.hpp  screenshot.hpp
